# wiredcraft-backend-developer-test

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2f832b44970e_added_password_to_user_model.py  4d85f638ac86_added_email_to_user_model.py  9a20ba096939_creating_first_tables.py  b9d2f8742f15_created_users_table.py
src/config/: __init__.py  env_vars.py  security.py
src/database/: __init__.py  models.py  setup.py
src/routes/: __init__.py  users.py
src/schemas/: users.py
src/services/: users.py
